--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
