--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "13.2.4",
     "flowbite": "^1.6.4",
     "flowbite-react": "^0.4.2",
+    "jotai": "^2.0.3",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
