--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "flowbite": "^1.6.4",
     "flowbite-react": "^0.4.2",
     "jotai": "^2.0.3",
+    "million": "^2.5.12",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
