--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.2",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@nextui-org/react": "^2.1.13",
     "@prisma/client": "^5.1.1",
     "@t3-oss/env-nextjs": "^0.6.0",
     "@tanstack/react-query": "^4.32.6",
@@ -19,14 +21,21 @@
     "@trpc/next": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "@trpc/server": "^10.37.1",
+    "bcryptjs": "^2.4.3",
+    "framer-motion": "^10.16.4",
+    "i": "^0.3.7",
     "next": "^13.4.19",
     "next-auth": "^4.23.0",
+    "npm": "^10.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "^1.13.1",
+    "usehooks-ts": "^2.9.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/bcryptjs": "^2.4.4",
     "@types/eslint": "^8.44.2",
     "@types/node": "^18.16.0",
     "@types/react": "^18.2.20",
@@ -34,6 +43,7 @@
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "autoprefixer": "^10.4.14",
+    "daisyui": "^3.8.2",
     "eslint": "^8.47.0",
     "eslint-config-next": "^13.4.19",
     "postcss": "^8.4.27",
