--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcryptjs": "^2.4.3",
     "framer-motion": "^10.16.4",
     "i": "^0.3.7",
+    "jotai": "^2.4.3",
     "next": "^13.4.19",
     "next-auth": "^4.23.0",
     "npm": "^10.1.0",
