--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "npm": "^10.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
     "superjson": "^1.13.1",
     "usehooks-ts": "^2.9.1",
     "zod": "^3.21.4"
