--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.2",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.9.0",
+    "@prisma/client": "^5.10.2",
     "@t3-oss/env-nextjs": "^0.6.0",
     "@tanstack/react-query": "^4.32.6",
     "@trpc/client": "^10.37.1",
@@ -40,8 +40,10 @@
     "@types/bcryptjs": "^2.4.4",
     "@types/eslint": "^8.44.2",
     "@types/node": "^18.16.0",
+    "@types/phoenix": "^1.6.4",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@types/websocket": "^1.0.10",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "autoprefixer": "^10.4.14",
@@ -51,7 +53,7 @@
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.5.1",
-    "prisma": "^5.1.1",
+    "prisma": "^5.10.2",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6"
   },
