--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "website",
-  "version": "0.1.0",
+  "name": "bhaveshportfolio",
+  "version": "1.5.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -20,16 +20,32 @@
     "flowbite-react": "^0.4.2",
     "jotai": "^2.0.3",
     "million": "^2.5.12",
-    "next": "13.2.4",
+    "next": "^13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.2",
     "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/bcryptjs": "^2.4.4",
+    "@types/eslint": "^8.44.2",
+    "@types/node": "^18.16.0",
+    "@types/phoenix": "^1.6.4",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "@types/websocket": "^1.0.10",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "daisyui": "^4.6.1",
+    "eslint": "^8.47.0",
+    "eslint-config-next": "^13.4.19",
+    "postcss": "^8.4.27",
+    "prettier": "^3.0.0",
+    "prettier-plugin-tailwindcss": "^0.5.1",
+    "prisma": "^5.10.2",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.1.6"
   }
 }
