--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "eslint-config-next": "13.2.4",
     "flowbite": "^1.6.4",
     "flowbite-react": "^0.4.2",
-    "jotai": "^2.0.3",
+    "framer-motion": "^11.0.6",
+    "jotai": "^2.6.5",
     "million": "^2.5.12",
     "next": "^13.5.6",
     "react": "18.2.0",
