--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bhaveshpdev-new",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "private": true,
   "scripts": {
     "build": "next build",
@@ -31,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
     "react-pdf": "^7.7.1",
+    "sharp": "^0.33.2",
     "superjson": "^1.13.1",
     "usehooks-ts": "^2.9.1",
     "zod": "^3.21.4"
