--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "framer-motion": "^10.16.4",
     "i": "^0.3.7",
     "jotai": "^2.4.3",
-    "next": "^13.4.19",
+    "next": "^14.1.0",
     "next-auth": "^4.23.0",
     "npm": "^10.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-pdf": "^7.7.1",
     "sharp": "^0.33.2",
